better name for template variable which holds the path to shared static files served by nginx

--- a/gesishub/gesishub/files/etc/jupyterhub/extra_config.json
+++ b/gesishub/gesishub/files/etc/jupyterhub/extra_config.json
@@ -13,7 +13,7 @@
     "faq_url": "/faq/",
     "active": "hub",
 
-    "static_hub": "/static/",
+    "static_nginx": "/static/",
     "static_binder": "/services/binder/static/",
     "projects_limit": "5",
     "featured_projects": [
