add maintenance page back

--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -180,6 +180,9 @@ binderhub:
       services:
         binder:
           oauth_no_confirm: true
+      extraEnv:
+        - name: GESISHUB_UNDER_MAINTENANCE
+          value: "true"
       extraConfig:
         00-orc: |
           if "cookie_options" in c.JupyterHub.tornado_settings:
@@ -200,6 +203,7 @@ binderhub:
 
           from jupyterhub.handlers.base import PrefixRedirectHandler
           from jupyterhub.utils import url_path_join
+          import os
           def get(self):
               path = self.request.path
               if path == "/about/":
@@ -210,6 +214,17 @@ binderhub:
                   self.finish(html)
               elif path == "/faq/":
                   html = self.render_template("faq.html", **{"active": "faq"})
+                  self.finish(html)
+              elif path == "/maintenance" and os.getenv("GESISHUB_UNDER_MAINTENANCE", "false") == "true":
+                  status_code = 503
+                  status_message = "Under maintenance"
+                  self.set_status(status_code, status_message)
+                  context = {'status_code': status_code,
+                             'status_message': status_message,
+                             'message': "This service will be back soon.",
+                             # 'message_html': "This service will be back soon.",
+                             'active': "home"}
+                  html = self.render_template("error.html", **context)
                   self.finish(html)
               elif path == "/":
                   if self.get_cookie(ORC_LOGIN_COOKIE_NAME):
