--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -182,7 +182,7 @@ binderhub:
           oauth_no_confirm: true
       extraEnv:
         - name: GESISHUB_UNDER_MAINTENANCE
-          value: "true"
+          value: "false"
       extraConfig:
         00-orc: |
           if "cookie_options" in c.JupyterHub.tornado_settings:
