--- a/gesishub/gesishub/files/etc/jupyterhub/extra_config.json
+++ b/gesishub/gesishub/files/etc/jupyterhub/extra_config.json
@@ -15,6 +15,7 @@
 
     "static_nginx": "/static/",
     "static_binder": "/services/binder/static/",
+    "binder_base_url": "/services/binder/",
     "projects_limit": "5",
     "featured_projects": [
       {
