--- a/gesishub/gesishub/requirements.yaml
+++ b/gesishub/gesishub/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n077.hef338bc
+   version: 0.2.0-n126.h5a1202f
    repository: https://jupyterhub.github.io/helm-chart
