--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -52,7 +52,7 @@ binderhub:
       pod_quota: 200
       base_url: /binder/
       use_registry: true
-      build_image: jupyter/repo2docker:0.11.0-5.g8d490cf
+      build_image: jupyter/repo2docker:0.11.0-10.gd8ccf36
       build_node_selector:
         user: worker
       per_repo_quota: 100
