--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -48,7 +48,7 @@ binderhub:
       auth_enabled: true
       base_url: /services/binder/
       use_registry: true
-      build_image: jupyter/repo2docker:0.11.0-5.g8d490cf
+      build_image: jupyter/repo2docker:0.11.0-10.gd8ccf36
       build_node_selector:
         user: worker
       per_repo_quota: 100
