--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n120.h207ae70
+   version: 0.2.0-n121.h6d936d7
    repository: https://jupyterhub.github.io/helm-chart
