--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -96,7 +96,15 @@ binderhub:
                             "static_version": uuid.uuid4().hex
                             })
       c.BinderHub.template_variables.update(template_vars)
-    01-launcher:  |
+    01-repo-providers:  |
+      from binderhub.repoproviders import GitHubRepoProvider, GitRepoProvider, GitLabRepoProvider, GistRepoProvider
+      c.BinderHub.repo_providers = {
+          'gh': GitHubRepoProvider,
+          'gist': GistRepoProvider,
+          'gl': GitLabRepoProvider,
+          'git': GitRepoProvider,
+      }
+    02-launcher:  |
       from tornado import web
       import json
       import os
