--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n121.h6d936d7
+   version: 0.2.0-n126.h5a1202f
    repository: https://jupyterhub.github.io/helm-chart
