--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n126.h5a1202f
+   version: 0.2.0-n128.h00b0576
    repository: https://jupyterhub.github.io/helm-chart
