--- a/gesishub/config_test.yaml
+++ b/gesishub/config_test.yaml
@@ -95,7 +95,7 @@ binderhub:
     proxy:
       service:
         nodePorts:
-          http: 30180
+          https: 30180
       chp:
         resources:
           requests:
