--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -267,7 +267,7 @@ binderhub:
       pdb:
         minAvailable: 0
       https:
-        enabled: false
+        type: offload
       service:
         type: NodePort
 
