set http nodeport too, so it is not generated by k8s

--- a/gesishub/config_test.yaml
+++ b/gesishub/config_test.yaml
@@ -95,6 +95,7 @@ binderhub:
     proxy:
       service:
         nodePorts:
+          http: 30184
           https: 30180
       chp:
         resources:
