--- a/gesisbinder/config.yaml
+++ b/gesisbinder/config.yaml
@@ -88,7 +88,8 @@ binderhub:
     proxy:
       service:
         nodePorts:
-          http: 30082
+          http: 30085
+          https: 30082
       chp:
         resources:
           requests:
