z2jh https enabled with type offload

--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -270,7 +270,7 @@ binderhub:
       pdb:
         minAvailable: 0
       https:
-        enabled: false
+        type: offload
       service:
         type: NodePort
 
