--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -52,7 +52,7 @@ binderhub:
       pod_quota: 200
       base_url: /binder/
       use_registry: true
-      build_image: jupyter/repo2docker:0.11.0-13.g26542df
+      build_image: jupyter/repo2docker:0.11.0-20.g070e4a9
       build_node_selector:
         user: worker
       per_repo_quota: 100
