--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -50,7 +50,7 @@ binderhub:
       auth_enabled: true
       base_url: /services/binder/
       use_registry: true
-      build_image: jupyter/repo2docker:0.11.0-13.g26542df
+      build_image: jupyter/repo2docker:0.11.0-20.g070e4a9
       build_node_selector:
         user: worker
       per_repo_quota: 100
