--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -49,7 +49,7 @@ binderhub:
       auth_enabled: true
       base_url: /services/binder/
       use_registry: true
-      build_image: jupyter/repo2docker:0.11.0-20.g070e4a9
+      build_image: jupyter/repo2docker:0.11.0-22.ge6cbee5
       build_node_selector:
         user: worker
       per_repo_quota: 100
