--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -52,7 +52,7 @@ binderhub:
       pod_quota: 20
       base_url: /binder/
       use_registry: true
-      build_image: jupyter/repo2docker:0.11.0-22.ge6cbee5
+      build_image: jupyter/repo2docker:0.11.0-24.gfce6488
       build_node_selector:
         user: worker
       per_repo_quota: 100
