--- a/gesisbinder/config_test.yaml
+++ b/gesisbinder/config_test.yaml
@@ -64,6 +64,8 @@ binderhub:
             memory: 512Mi
 
     singleuser:
+      nodeSelector:
+        base: worker
       cpu:
         guarantee: 0.1
         limit: 0.5
