--- a/gesishub/config_test.yaml
+++ b/gesishub/config_test.yaml
@@ -107,6 +107,8 @@ binderhub:
             memory: 512Mi
 
     singleuser:
+      nodeSelector:
+        base: worker
       storage:
         # has no effect when using nfs: this is a min limit not a max
         capacity: 5Gi
