Revert "test user pods on user worker"
This reverts commit 4b074893b1c786c822df4906acd5046079f72165.

--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -362,7 +362,7 @@ binderhub:
               - ipBlock:
                   cidr: 10.6.13.139/32  # mongodb - https://github.com/gesiscss/btw17_sample_scripts
       nodeSelector:
-        user: worker
+        base: worker
       cmd: jupyterhub-singleuser
       storage:
         type: dynamic
