add use_registry setting back, it was deleted by mistake

--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -48,6 +48,7 @@ binderhub:
     BinderHub:
       auth_enabled: true
       base_url: /services/binder/
+      use_registry: true
       build_image: jupyter/repo2docker:0.11.0-24.gfce6488
       build_node_selector:
         user: worker
