move nfs to user:worker

--- a/.gitignore
+++ b/.gitignore
@@ -17,9 +17,9 @@ venv
 monitoring/efk_stack/config_default.yaml
 load_balancer/sites-available/default_nginx
 gallery/bindergallery
-#gesishub/gesishub/charts
-#gesisbinder/gesisbinder/charts
-#monitoring/elastic-stack/elastic-stack/charts
-#gesisbinder/gesisbinder/requirements.lock
-#gesishub/gesishub/requirements.lock
-#monitoring/elastic-stack/elastic-stack/requirements.lock
+gesishub/gesishub/charts
+gesisbinder/gesisbinder/charts
+monitoring/elastic-stack/elastic-stack/charts
+gesisbinder/gesisbinder/requirements.lock
+gesishub/gesishub/requirements.lock
+monitoring/elastic-stack/elastic-stack/requirements.lock
