--- a/monitoring/prometheus_config.yaml
+++ b/monitoring/prometheus_config.yaml
@@ -26,7 +26,7 @@ server:
 #    existingClaim:
   retention: 60d
 
-kubeStateMetrics:
+#kubeStateMetrics:
 #  nodeSelector:
 #    base: worker
 #  resources:
