change name of prometheus datasource in grafana

--- a/monitoring/grafana_config.yaml
+++ b/monitoring/grafana_config.yaml
@@ -49,7 +49,7 @@ datasources:
   datasources.yaml:
     apiVersion: 1
     datasources:
-      - name: prometheus
+      - name: gesis-prometheus
         orgId: 1
         type: prometheus
         url: http://prometheus-server:80
