--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n132.h1a8ce62
+   version: 0.2.0-n134.hb4819f9
    repository: https://jupyterhub.github.io/helm-chart
