--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n134.hb4819f9
+   version: 0.2.0-n136.h146e5d2
    repository: https://jupyterhub.github.io/helm-chart
