increase quota for mitx-803/vis repo to 200 (https://github.com/jupyterhub/team-compass/issues/275) and increase total pod quota to 300

--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -44,12 +44,13 @@ binderhub:
         - ^hmharshit/mltraining.*
       high_quota_specs:
         - ^gesiscss/.*
+        - ^mitx-803/vis/.*
       #spec_config:
       #  - pattern: ^gesiscss/.*
       #    config:
       #      quota: 200
     BinderHub:
-      pod_quota: 200
+      pod_quota: 300
       base_url: /binder/
       use_registry: true
       build_image: jupyter/repo2docker:0.11.0-31.g1776b79
