restart_policy is already set 'OnFailure' by kubespawner.

--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -91,7 +91,6 @@ binderhub:
       import uuid
       template_vars.update({'user': None,
                             'logout_url': '/hub/logout',
-
                             #'help_url': 'https://www.gesis.org/en/help/',
                             "static_version": uuid.uuid4().hex
                             })
@@ -255,7 +254,9 @@ binderhub:
           c.JupyterHub.template_vars.update(template_vars)
 
           #c.KubeSpawner.extra_pod_config.update({'restart_policy': 'Never'})
-          c.KubeSpawner.extra_pod_config.update({'restart_policy': 'OnFailure'})
+          # restart_policy is already set 'OnFailure' by kubespawner:
+          # https://github.com/jupyterhub/kubespawner/blob/8751773916ccc6b84c998f7950dd3e07fea5ae4e/kubespawner/objects.py#L231
+          #c.KubeSpawner.extra_pod_config.update({'restart_policy': 'OnFailure'})
           #c.KubeSpawner.start_timeout = 600
         03-orc: |
           from extra_config import KeycloakLogoutHandler, KeycloakLoginHandler, KeycloakOAuthCallbackHandler
