--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -339,9 +339,10 @@ binderhub:
             to:
               - ipBlock:
                   cidr: 10.0.0.0/8  # we need this range for kubernetes services
-              - ipBlock:
-                  # TODO do we really need this for allowing DNS in cluster
-                  cidr: 192.168.0.0/16  # Calico uses 192.168.0.0/16 as the Pod network CIDR
+              # we changed the Pod network CIDR to 10.244.0.0/16 for calico
+              #- ipBlock:
+              #    # TODO do we really need this for allowing DNS in cluster
+              #    cidr: 192.168.0.0/16  # Calico by default uses 192.168.0.0/16 as the Pod network CIDR
           # allow access to the world,
           # but not the cluster
           # https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/create-cluster-kubeadm/#pod-network
@@ -362,8 +363,9 @@ binderhub:
             to:
               - ipBlock:
                   cidr: 0.0.0.0/0  # represents all possible IP addresses
+                  # we changed the Pod network CIDR to 10.244.0.0/16 for calico
                   except:
-                    - 192.168.0.0/16  # Calico uses 192.168.0.0/16 as the Pod network CIDR
+                    #- 192.168.0.0/16  # Calico uses 192.168.0.0/16 as the Pod network CIDR
                     - 169.254.169.254/32
                     - 10.0.0.0/8
               - ipBlock:
