--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -52,7 +52,7 @@ binderhub:
       pod_quota: 100
       base_url: /binder/
       use_registry: true
-      build_image: jupyter/repo2docker:0.11.0-42.g260774b
+      build_image: jupyter/repo2docker:0.11.0-44.g65d2713
       build_node_selector:
         user: worker
       per_repo_quota: 100
